# pydata-london-2026-data-designer-anonymizer

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  smoke_test.py
.jupyter/lab/user-settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
data/: usage_logs_seed.parquet  wiki_seed.parquet
notebooks/: 01_text_qa_pipeline.ipynb  02_document_visual_qa.ipynb  03_privacy_with_anonymizer.ipynb  bonus_generate_documents.ipynb  bonus_generate_usage_logs.ipynb  notebook_helpers.py  prompts.py
planning/: anonymizer-runtime.md  session-plan.md
